--- a/chat_exporter/html/attachment/audio.html
+++ b/chat_exporter/html/attachment/audio.html
@@ -9,7 +9,7 @@
                 <div class="chatlog__attachment-filesize">
                     {{ATTACH_BYTES}}
                 </div>
-                <audio class="chatlog__attachment-thumbnail" style="padding-top: 5px" controls>
+                <audio controls>
                     <source src="{{ATTACH_URL}}" alt="Audio Attachment" title="{{ATTACH_FILE}}">
                 </audio>
             </div>
