--- a/chat_exporter/html/attachment/image.html
+++ b/chat_exporter/html/attachment/image.html
@@ -1,3 +1,5 @@
 <div class=chatlog__attachment>
-    <a href={{ATTACH_URL}}><img class=chatlog__attachment-thumbnail src={{ATTACH_URL_THUMB}}></a>
+    <a href={{ATTACH_URL}} target="_blank">
+        <img class=chatlog__attachment-thumbnail src={{ATTACH_URL_THUMB}}>
+</a>
 </div>
