--- a/chat_exporter/html/embed/body.html
+++ b/chat_exporter/html/embed/body.html
@@ -1,5 +1,5 @@
 <div class=chatlog__embed>
-    <div class=chatlog__embed-color-pill style=background-color:rgba({{EMBED_R}},{{EMBED_G}},{{EMBED_B}},1)></div>
+    <div class="chatlog__embed-color-pill" style="background-color:rgba({{EMBED_R}}, {{EMBED_G}}, {{EMBED_B}}, 1)"></div>
     <div class=chatlog__embed-content-container>
         <div class=chatlog__embed-content>
             <div class=chatlog__embed-text>
