--- a/chat_exporter/html/script/fancy_time.html
+++ b/chat_exporter/html/script/fancy_time.html
@@ -7,20 +7,20 @@ dayjs.extend(window.dayjs_plugin_isTomorrow);
 dayjs.extend(window.dayjs_plugin_isBetween);
 
 dayjs.tz.setDefault("{{TIMEZONE}}")
-dayjs().format("DD/MM/YYYY HH:mm");
+dayjs().format("DD/MM/YYYY {{TIME_FORMAT}}");
 var timeStamps = document.getElementsByClassName('chatlog__timestamp');
 for(var i = 0; i < timeStamps.length; i++) {
-    const date_1 = dayjs.tz(timeStamps[i].innerText, "DD-MM-YYYY HH:mm", "{{TIMEZONE}}");
+    const date_1 = dayjs.tz(timeStamps[i].innerText, "DD-MM-YYYY {{TIME_FORMAT}}", "{{TIMEZONE}}");
     const date_2 = dayjs.tz();
     const diff = date_2.diff(date_1, 'day', true)
 
     if (date_1.isTomorrow()) {
-        timeStamps[i].ineerText = "Tomorrow at " + date_1.format('HH:mm')
+        timeStamps[i].ineerText = "Tomorrow at " + date_1.format('{{TIME_FORMAT}}')
     } else if (date_1.isToday()) {
-        timeStamps[i].innerText = "Today at " + date_1.format('HH:mm')
+        timeStamps[i].innerText = "Today at " + date_1.format('{{TIME_FORMAT}}')
     } else if (date_1.add(1, 'day').isToday()) {
-        timeStamps[i].innerText = "Yesterday at " + date_1.format('HH:mm')
+        timeStamps[i].innerText = "Yesterday at " + date_1.format('{{TIME_FORMAT}}')
     } else if (date_1.isBetween(date_2, date_2.subtract(7, 'day'))) {
-        timeStamps[i].innerText = date_1.day(date_1.day()).format("dddd [at] HH:mm")
+        timeStamps[i].innerText = date_1.day(date_1.day()).format("dddd [at] {{TIME_FORMAT}}")
     }
 }
